--- a/euro.ipynb
+++ b/euro.ipynb
@@ -1344,22 +1344,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "lam < 0 or lam is NaN",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[150], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m round_of_16_results \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m team1, team2 \u001b[38;5;129;01min\u001b[39;00m round_of_16_matchups:\n\u001b[1;32m---> 16\u001b[0m     winner \u001b[38;5;241m=\u001b[39m \u001b[43msimulate_knockout_match\u001b[49m\u001b[43m(\u001b[49m\u001b[43mteam1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mteam2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgroup_matches\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m     round_of_16_results\u001b[38;5;241m.\u001b[39mappend((team1, team2, winner))\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Print Round of 16 results\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[145], line 5\u001b[0m, in \u001b[0;36msimulate_knockout_match\u001b[1;34m(team1, team2, group_matches)\u001b[0m\n\u001b[0;32m      3\u001b[0m team1_xG \u001b[38;5;241m=\u001b[39m group_matches[group_matches[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHome_Team\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m team1][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mXGhome\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean() \u001b[38;5;241m+\u001b[39m group_matches[group_matches[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAway_Team\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m team2][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mXGaway\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\n\u001b[0;32m      4\u001b[0m team2_xG \u001b[38;5;241m=\u001b[39m group_matches[group_matches[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAway_Team\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m team1][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mXGaway\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean() \u001b[38;5;241m+\u001b[39m group_matches[group_matches[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHome_Team\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m team2][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mXGhome\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mmean()\n\u001b[1;32m----> 5\u001b[0m team1_score \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpoisson\u001b[49m\u001b[43m(\u001b[49m\u001b[43mteam1_xG\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m team2_score \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mpoisson(team2_xG)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m team1_score \u001b[38;5;241m>\u001b[39m team2_score:\n",
-      "File \u001b[1;32mnumpy\\\\random\\\\mtrand.pyx:3698\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.poisson\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_common.pyx:924\u001b[0m, in \u001b[0;36mnumpy.random._common.disc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m_common.pyx:463\u001b[0m, in \u001b[0;36mnumpy.random._common.check_constraint\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: lam < 0 or lam is NaN"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Round of 16 Results:\n",
+      "--------------------\n",
+      "Germany vs Denmark -> Winner: Denmark\n",
+      "Italy vs Scotland -> Winner: Italy\n",
+      "Turkey vs Serbia -> Winner: Turkey\n",
+      "Netherlands vs Romania -> Winner: Romania\n",
+      "Hungary vs Spain -> Winner: Hungary\n",
+      "England vs Czech Republic -> Winner: England\n",
+      "Belgium vs Croatia -> Winner: Croatia\n",
+      "France vs Georgia -> Winner: Georgia\n"
      ]
     }
    ],
@@ -1400,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1409,10 +1411,11 @@
      "text": [
       "\n",
       "Quarterfinal Results:\n",
-      "Germany vs Italy -> Winner: Italy\n",
-      "Czech Republic vs England -> Winner: England\n",
-      "France vs Belgium -> Winner: France\n",
-      "Portugal vs Ukraine -> Winner: Portugal\n"
+      "--------------------\n",
+      "Denmark vs Italy -> Winner: Denmark\n",
+      "Turkey vs Romania -> Winner: Turkey\n",
+      "Hungary vs England -> Winner: Hungary\n",
+      "Croatia vs Georgia -> Winner: Croatia\n"
      ]
     }
    ],
@@ -1440,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1449,8 +1452,9 @@
      "text": [
       "\n",
       "Semifinal Results:\n",
-      "Italy vs England -> Winner: England\n",
-      "France vs Portugal -> Winner: France\n"
+      "--------------------\n",
+      "Denmark vs Turkey -> Winner: Denmark\n",
+      "Hungary vs Croatia -> Winner: Croatia\n"
      ]
     }
    ],
@@ -1476,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1489,8 @@
      "text": [
       "\n",
       "Final Result:\n",
-      "England vs France -> Winner: France\n"
+      "--------------------\n",
+      "Denmark vs Croatia -> Winner: Denmark\n"
      ]
     }
    ],
