--- a/euro.ipynb
+++ b/euro.ipynb
@@ -1542,14 +1542,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score:  0.5384615384615384\n"
+      "Predictions score:  0.5384615384615384\n"
      ]
     },
     {
@@ -1913,7 +1913,7 @@
        "11859       0          0 2024-06-26         Ukraine        12"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
